--- a/public/css/chessCSS.css
+++ b/public/css/chessCSS.css
@@ -13,150 +13,20 @@ body{
 	height:100%;
 }
 
-header {
-	height:200px;
-	width:100%;
-	min-width:1450px;
-	padding-bottom:10px;
-	
-}
-
-a{
-	color:white;	
-	font-size:20px;
-	font-family:verdana;
-}
-.header_top{
-	height:80%;
-	width:100%;
-	float:left;
-	background-color:#b3b3b3;
-}
-
-.header_top h1{
-	margin:0px;
-	float:left;
-	color:#4d4d4d;
-	font-size:70px;
-}
-
-.login_bar{
-	height:20%;
-	width:100%;
-	float:left;
-	background-color:#a6a6a6;
-}
-
-.login_bar ul{
-	float:right;	
-}
-
-.login_bar a:hover{
-	background:linear-gradient(#999999,#808080);
-}
-
-.nav_bar{
-	height:20%;
-	width:100%;
-	background-color:blue;
-	float:left;
-}
-
-.nav_bar ul{
-	padding-left:300px;
-	padding-right:300px;
-	margin:auto;
-	width:850px;
-
-}
-
-
-.nav_bar_tabs{
-	height:100%;
-	list-style-type:none;
-	margin:0px;
-	padding:0px;
-}
-
-.nav_bar_tabs li{
-	display:table;
-	height:100%;
-	float:left;
-	border-right:1px solid;
-}
-.nav_bar_tabs a{
-	display:table-cell;
-	vertical-align:middle;
-	padding-right:20px;
-	padding-left:20px;
-	text-decoration:none;
-}
-
-.nav_bar a:hover{
-	background:linear-gradient(#0000b3,#000080);
-}
-
-.content_wrapper {
-	width:1450px;
-	height:100%;
-	margin:auto;
-	
-}
-.left_info_bar{
-	width:300px;
-	height:100%;
-	float:left;
-	background-color:white;
-}
-.textcontainer {
-	width:830px;
-	margin-left:10px;
-	margin-right:10px;
-	background-color:yellow;
-	float:left;
-}
-article{
-	padding:20px;
-}
-
-article h1{
-	margin:0px;
-	font-size:60px;
-}
-.right_info_bar{
-	float:left;
-	width:300px;
-	height:100%;
-	
-}
-.right_info_bar h5{
-	margin-top:0px;
-	margin-bottom:2px;
-	width:100%;
-	background-color:#a6a6a6;
-}
-.right_info_bar h2{
-	margin:2px;
-}
-
-.player_info {
-	
-	
-}
-
-.game_lobby{
-	width:100%
-	
-}
-
-.game_lobby h4{
-	background-color:#b3b3b3;
+h1,h2,h3,h4,h5 {
 	margin:0px;
 }
+
+.page-wrap{
+	min-width:300px;
+	background-image:url("../images/board.jpg");
+}
+
 
 .footer p{
 	width:100%;
 	text-align:center;
+	margin:0px;
 }
 
 
