--- a/public/css/chessCSS.css
+++ b/public/css/chessCSS.css
@@ -19,14 +19,16 @@ h1,h2,h3,h4,h5 {
 
 .page-wrap{
 	min-width:300px;
+  height:100%;
 	background-image:url("../images/board.jpg");
 }
 
 
-.footer p{
+footer p{
 	width:100%;
 	text-align:center;
 	margin:0px;
+  
 }
 
 
