--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -1,14 +1,12 @@
 header
-        ul.nav-bar.login-bar-tabs
-          li
-            a(href='register') Register
-          
-          li
-            a(href='login') Login
-          
-          li
-            a(href='logout') logout
-   
+        .login-bar
+          form(action="login",method="POST")
+            label(for="username") Username
+            input(type="text",id="username",name="username")
+            label(for="password") Password
+            input(type="password",id="password",name="password")
+            input(id="subbut",type="submit",value="login")
+          input(id="subbut",type="submit",value="register")
         ul.nav-bar.nav-bar-tabs
           li
             a(href='index') Home
