--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -9,22 +9,22 @@ header
           input(id="subbut",type="submit",value="register")
         ul.nav-bar.nav-bar-tabs
           li
-            a(href='index') Home
-   
-          li
-            a(href='lobby') Lobby
-       
-          li
-            a(href='howto') How To Play
-      
-          li
-            a(href='about') About
+            a(href='/') Home
 
           li
-            a(href='design') Design
+            a(href='/lobby') Lobby
 
           li
-            a(href='testing') Testing
+            a(href='/howto') How To Play
 
           li
-            a(href='aboutus') About Us
+            a(href='/about') About
+
+          li
+            a(href='/design') Design
+
+          li
+            a(href='/testing') Testing
+
+          li
+            a(href='/aboutus') About Us
