--- a/views/controls/player.jade
+++ b/views/controls/player.jade
@@ -1,5 +1,3 @@
 .controls.player
-              h3 Player Information
-              ul
-                li= 'Username: ' + username
-                li Ranking: 1
+  h3 Username
+  p= username
