--- a/views/controls/playing.jade
+++ b/views/controls/playing.jade
@@ -1,9 +1,7 @@
 .controls.playing
-              -gameIDs = [0,1,2,3,4]
-              h3 Current games
-              ul
-                each gameID in gameIDs
-                  li
-                    .current-game
-                      a(href='/play/' + gameID)='game ' + gameID
-                  
+  h3 Current games
+  ul
+    each game in activeGames
+      li
+        .current-game
+          a(href='/play/' + game._id)= 'Game with ' + game.otherPlayer
