--- a/views/text/about.jade
+++ b/views/text/about.jade
@@ -1,24 +1,3 @@
 h1 The Rules Of Chess
-p
-    | The rules of chess are as follows
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
+p.
+  We can haz chessburger
