--- a/public/css/chessCSS.css
+++ b/public/css/chessCSS.css
@@ -4,6 +4,7 @@ padding:0;
 height:100%;
 width:100%;
 overflow:hidden;
+font-family: Helvetica, sans-serif;
 }
 body{
 	margin:0px;
@@ -28,16 +29,5 @@ footer p{
 	width:100%;
 	text-align:center;
 	margin:0px;
-  
+  color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
