--- a/views/text/howto.jade
+++ b/views/text/howto.jade
@@ -1,24 +1,13 @@
 h1 The Rules Of Chess
+br
 p
-    | The rules of chess are as follows
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
-    |   rule
-    br
+  | Source:
+  a(target="_blank",href="https://www.chess.com/learn-how-to-play-chess") https://www.chess.com/learn-how-to-play-chess
+br
+h2 The Goal of Chess
+p Chess is a game played between two opponents on opposite sides of a board containing 64 squares of alternating colors. Each player has 16 pieces: 1 king, 1 queen, 2 rooks, 2 bishops, 2 knights, and 8 pawns. The goal of the game is to checkmate the other king. Checkmate happens when the king is in a position to be captured (in check) and cannot escape from capture.
+h2 Starting a Game
+p At the beginning of the game the chessboard is laid out so that each player has the white (or light) color square in the bottom right-hand side. The chess pieces are then arranged the same way each time. The second row (or rank) is filled with pawns. The rooks go in the corners, then the knights next to them, followed by the bishops, and finally the queen, who always goes on her own matching color (white queen on white, black queen on black), and the king on the remaining square.
+p The player with the white pieces always moves first. Therefore, players generally decide who will get to be white by chance or luck such as flipping a coin or having one player guess the color of the hidden pawn in the other player's hand. White then makes a move, followed by black, then white again, then black and so on until the end of the game.
+h2 How the Pieces Move
+p Each of the 6 different kinds of pieces moves differently. Pieces cannot move through other pieces (though the knight can jump over other pieces), and can never move onto a square with one of their own pieces. However, they can be moved to take the place of an opponent's piece which is then captured. Pieces are generally moved into positions where they can capture other pieces (by landing on their square and then replacing them), defend their own pieces in case of capture, or control important squares in the game.
