Adding running instructions

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -14,7 +14,7 @@ header
             a(href='/howto') How To Play
 
           li
-            a(href='/about') About
+            a(href='/about') Running the app
 
           // li
             a(href='/design') Design
