--- a/views/text/about.jade
+++ b/views/text/about.jade
@@ -1,3 +1,4 @@
-h1 The Rules Of Chess
-p.
-  We can haz chessburger
+h1 Running the App
+ol
+  li In a terminal window, cd to the root directory, and run 'mongod --dbpath data'
+  li In a new terminal window, cd to the root directory, and run 'npm start'
